add maping list, add dayjs library for working with time, add utility types library for Optional type, add optimization, add modal into portal

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,6 +1,15 @@
 @import "../../style/variables.scss";
+.bg {
+	width: 100vw;
+  max-height: min(100%, 100vh);
+  min-height: 100vh;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  overflow-y: hidden;
+}
 .modal {
-	position: absolute;
+	position: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -9,6 +18,20 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(255, 243, 223, 0.8);
+	&-enter {
+		opacity: 0;
+		&-active {
+			opacity: 1;
+			transition: opacity 500ms ease-in;
+		}
+	}
+	&-exit {
+		opacity: 1;
+		&-active {
+			opacity: 0;
+			transition: opacity 500ms ease-in;
+		}
+	}
 	&__body {
 		width: 390px;
 		min-height: 120px;
